fixed some wrapping issues

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -104,7 +104,7 @@ table .button {
   width: 100%;
 }
 
-.content-start {
+.wrap, .content-start {
   height: calc(100% - 5px);
   margin: 5px auto 0;
   padding-bottom: 70px;
